--- a/src/components/misc/License.astro
+++ b/src/components/misc/License.astro
@@ -4,9 +4,6 @@ import { licenseConfig, profileConfig } from "../../config";
 
 import { formatPostDateForDisplay } from "../../utils/date-utils";
 
-import I18n from "@components/I18n.astro";
-import { Translation } from "../../i18n/translation";
-
 interface Props {
 	title: string;
 	slug: string;
@@ -33,34 +30,23 @@ const postUrl = decodeURIComponent(Astro.url.toString());
 	if (currentLink) {
 	    const oldUrl = window.location.href;
 	    const url = new URL(oldUrl);
-	    url.search = ''; // Remove query string
+	    url.search = ''; // 移除查询字符串
 	    if (url.hash.includes('giscus-')) {
-	        url.hash = ''; // Remove #giscus-xxx hash
+	        url.hash = ''; // 移除 #giscus-xxx 的 hash
 	    }
 	    const newUrl = url.toString();
 	    if (oldUrl !== newUrl) {
 	        console.log(`[license] replaced url: ${oldUrl} -> ${newUrl}`);
 	    }
 	
-	    currentLink.textContent = newUrl;  // Text = Current URL
-	    currentLink.href = newUrl;         // Link = Current URL
-	    currentLink.style.display = 'inline'; // Show
+	    currentLink.textContent = newUrl;  // 显示文本 = 当前 URL
+	    currentLink.href = newUrl;         // 点击跳转 = 当前 URL
+	    currentLink.style.display = 'inline'; // 显示出来
 	}
     </script>
 
     <div class="flex gap-6 mt-2">
         <div>
-<<<<<<< HEAD
-            <div class="transition text-black/30 dark:text-white/30 text-sm"><I18n key={Translation.Author} /></div>
-            <div class="transition text-black/75 dark:text-white/75 line-clamp-2"><I18n key={Translation.AuthorName} /></div>
-        </div>
-        <div>
-            <div class="transition text-black/30 dark:text-white/30 text-sm"><I18n key={Translation.PublishedAt} /></div>
-            <div class="transition text-black/75 dark:text-white/75 line-clamp-2">{formatPostDateForDisplay(pubDate)}</div>
-        </div>
-        <div>
-            <div class="transition text-black/30 dark:text-white/30 text-sm"><I18n key={Translation.PostLicense} /></div>
-=======
             <div class="transition text-white/30 text-sm">作者</div>
             <div class="transition text-white/75 line-clamp-2">{profileConf.name}</div>
         </div>
@@ -70,7 +56,6 @@ const postUrl = decodeURIComponent(Astro.url.toString());
         </div>
         <div>
             <div class="transition text-white/30 text-sm">许可协议</div>
->>>>>>> upstream/main
             <a href={licenseConf.url} target="_blank" class="link text-[var(--primary)] line-clamp-2">{licenseConf.name}</a>
         </div>
     </div>
