--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -2,16 +2,6 @@
 import ArchivePanel from "@components/ArchivePanel.astro";
 
 import MainGridLayout from "@layouts/MainGridLayout.astro";
-import { Translation, i18n } from "@/i18n/translation";
-
-export async function getStaticPaths() {
-	return [
-		{ params: { lang: 'zh-cn' } },
-		{ params: { lang: 'en' } },
-	];
-}
-
-const { lang } = Astro.params;
 
 const breadcrumbSchema = {
 	"@context": "https://schema.org",
@@ -20,20 +10,20 @@ const breadcrumbSchema = {
 		{
 			"@type": "ListItem",
 			position: 1,
-			name: i18n(Translation.Home, lang === 'zh-cn' ? 'zh_CN' : 'en'),
+			name: "首页",
 			item: Astro.site,
 		},
 		{
 			"@type": "ListItem",
 			position: 2,
-			name: i18n(Translation.Archive, lang === 'zh-cn' ? 'zh_CN' : 'en'),
+			name: "归档",
 			item: new URL("/archive", Astro.site).toString(),
 		},
 	],
 };
 ---
 
-<MainGridLayout title={i18n(Translation.Archive, lang === 'zh-cn' ? 'zh_CN' : 'en')} lang={lang === 'zh-cn' ? 'zh_CN' : 'en'}>
+<MainGridLayout title="归档">
     <script is:inline slot="head" type="application/ld+json" set:html={JSON.stringify(breadcrumbSchema)}></script>
     <ArchivePanel></ArchivePanel>
 </MainGridLayout>
