--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,7 +68,7 @@ const bannerOffset = bannerOffsetByPosition[siteConfig.banner.position || "cente
 ---
 
 <!DOCTYPE html>
-<html lang={siteLang} class="bg-[var(--page-bg)] transition text-[12px] md:text-[16px] dark">
+<html lang={siteLang} class="bg-[var(--page-bg)] transition text-[12px] md:text-[16px]">
 	<head>
 
 		<meta name="referrer" content="unsafe-url" />
