--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,8 +98,8 @@ const bannerOffset = bannerOffsetByPosition[siteConfig.banner.position || "cente
         <link rel="preconnect" href="https://pic1.acofork.com" />
         <link rel="preconnect" href="https://umami.acofork.com" />
         <link rel="preconnect" href="https://u.xiegao.top" />
-        <script defer src="https://u.xiegao.top/script.js" data-website-id="4696c062-4271-4b8b-8ed7-b481f5961f28"></script>
-		
+        <script data-swup-ignore-script defer src="https://u.xiegao.top/script.js" data-website-id="4696c062-4271-4b8b-8ed7-b481f5961f28"></script>
+
 		<script>import "../scripts/animate-value.js";</script>
 
 		{favicons.map(favicon => (
